Fixed Sidebar Overlap

--- a/src/index.css
+++ b/src/index.css
@@ -81,4 +81,6 @@
   }
 }
 
-
+* {
+  overflow-y: hidden;
+}
